--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -188,13 +188,16 @@
         <h2>9. Değişiklikler</h2>
         <p>Bu gizlilik politikasını zaman zaman güncelleyebiliriz. Önemli değişiklikler olduğunda sizi uygulama içi bildirimle bilgilendireceğiz.</p>
 
-        <h2>10. İletişim</h2>
+        <h2>10. Hesap Silme</h2>
+        <p>Hesabınızı ve verilerinizi silmek istiyorsanız, <a href="delete-account.html">Hesap Silme</a> sayfamızı ziyaret edebilirsiniz.</p>
+
+        <h2>11. İletişim</h2>
         <p>Gizlilik politikamız hakkında sorularınız varsa bizimle iletişime geçebilirsiniz:</p>
         <ul>
             <li>E-posta: privacy@bunedir.app</li>
         </ul>
 
-        <h2>11. Yasal Dayanak</h2>
+        <h2>12. Yasal Dayanak</h2>
         <p>Verilerinizi işlememizin yasal dayanakları:</p>
         <ul>
             <li><strong>Sözleşme:</strong> Hizmetlerimizi sağlamak için</li>
@@ -205,6 +208,10 @@
 
         <div class="footer">
             <p>Bu gizlilik politikası, KVKK (Kişisel Verilerin Korunması Kanunu) ve GDPR (General Data Protection Regulation) uyumlu olarak hazırlanmıştır.</p>
+            <p style="margin-top: 10px;">
+                <a href="delete-account.html">Hesap Silme</a> | 
+                <a href="mailto:privacy@bunedir.app">İletişim</a>
+            </p>
         </div>
     </div>
 </body>
